<resources>
    <string name="app_name" translatable="false">Wordhunter</string>
    <string name="easy">Plants</string>
    <string name="difficult">Countries</string>
    <string name="welcome">Welcome to \nWordhunter</string>
    <string name="placeholderWordToGuess">wordhunter</string>
    <string name="letterInput">Letter:</string>
    <string name="okButton">OK</string>
    <string name="guess_the_word">Wordhunter</string>
    <string name="category">Category:  %1$s</string>
    <string name="enter_letter">Enter a letter</string>
    <string name="letters_guessed">Letters guessed:</string>
    <string name="chooseCategory">Choose a category:</string>
    <string name="textview" translatable="false">TextView</string>

</resources>