<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/begruessung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/taupe"
        android:textSize="@dimen/font_size_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_easy"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="@dimen/big_button_height"
        android:layout_marginTop="@dimen/medium_margin"
        android:backgroundTint="@color/goldenrod"
        android:text="@string/easy"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_big_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/begruessung" />

    <Button
        android:id="@+id/btn_start_diff"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="@dimen/big_button_height"
        android:layout_marginTop="@dimen/small_margin"
        android:backgroundTint="@color/taupeGrey"
        android:text="@string/difficult"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_big_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_easy" />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_diff"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>